<resources>
    <string name="app_name" translatable="false">JustNotes</string>
    <string name="back">Back</string>
    <string name="inf">Information</string>
    <string name="site">Site</string>
    <string name="count1">Character counter</string>
    <string name="count2">Reading time</string>
    <string name="minuts">mins</string>
    <string name="hint">Write here</string>
    <string name="tg">Telegram</string>
    <string name="tasks">Tasks</string>
    <string name="rate">Rate app</string>
    <string name="appwidget_text" translatable="false">JustNotes</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Displays note</string>
    <string name="option1">Clear text</string>
    <string name="option2">Text info</string>
    <string name="option3">Save and exit</string>
    <string name="verison">Developer: jjewuz</string>
    <string name="lastedit">"Edited: "</string>
    <string name="Title">Note Title</string>
    <string name="deleted">Deleted</string>
    <string name="saved">Last save</string>
    <string name="pos">Yes</string>
    <string name="neg">No</string>
    <string name="delWarn">Delete the note?</string>
    <string name="export">Export to .txt</string>
    <string name="docMade">File saved in Downloads</string>
    <string name="note">Note</string>
    <string name="error">Error</string>
    <string name="countSymb">Character count:</string>
    <string name="loginTitle">JustNotes is locked</string>
    <string name="loginText">Please authenticate</string>
    <string name="settingsText">Settings</string>
    <string name="passwordSettings">Biometric auth</string>
    <string name="passEnable">Protection on</string>
    <string name="passDisabled">Protection off</string>
    <string name="authFail">Authentication failed</string>
    <string name="authSuc">Authentication succeeded</string>
    <string name="authError">Authentication error:</string>
    <string name="noPassError">Set a password on the device, or reset JustNotes data!</string>
    <string name="notes">Notes</string>
    <string name="menu_home">Home</string>
    <string name="add_button">New note</string>
    <string name="logo">Logo</string>
    <string name="fontToggle">System font</string>
    <string name="reportBug">Report app issue</string>
    <string name="buildn">Build number:</string>
    <string name="appversion">App version</string>
    <string name="appearance">Appearance</string>
    <string name="security">Security</string>
    <string name="other">Other</string>
    <string name="restart">Restart</string>
    <string name="nothingTxt">It\'s empty here!</string>
    <string name="socialLinksText">Subscribe to social networks:</string>
    <string name="todo">Task list</string>
    <string name="add">Add</string>
    <string name="openTask">Open by default</string>
    <string name="backup_title">Backup</string>
    <string name="do_backup">Backup</string>
    <string name="do_restore">Restore</string>
    <string name="licenses">Licenses</string>
    <string name="thx_license">Thanks to all developers of used third-party libraries.</string>
    <string name="backup_desc">Worry about the security of your notes</string>
    <string name="report_desc">If encountering errors</string>
    <string name="settings_desc">Appearance, security…</string>
    <string name="info_desc">Social links, licences...</string>
    <string name="more">More</string>
    <string name="backup_txt">In this section, you can make a local backup of your data.</string>
    <string name="backup_warn">Attention! Reminders are not saved.</string>
    <string name="not_encrypted">Attention! The local backup is not encrypted.</string>
    <string name="preview">Preview note text</string>
    <string name="set_on_widget">Set note to widget</string>
    <string name="delete_warn">You will not be able to recover a note after deleting it!</string>
    <string name="note_set_to_widget">The note has been installed in the widget</string>
    <string name="what_new_update">"What's new in "</string>
    <string name="what_new_desc">In new update there are new note widget! To set note on it, go to note, click on three dots and click on</string>
    <string name="notshowanymore">Don\'t show anymore</string>
    <string name="empty">Empty</string>
    <string name="no_note">You did not select note to display.</string>
    <string name="choose_note">Choose note to display.</string>
    <string name="actions">Actions</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="striked">Strikethrough</string>
    <string name="underlined">Underlined</string>
    <string name="clear_f">No format</string>
    <string name="import_txt">Import from .txt</string>
    <string name="update_downloaded">An update has just been downloaded from Google Play.</string>
    <string name="backup_rules">You can back up your notes here. To use local backup, the app needs access to the files on the device. To use cloud backup, you need to create an account.</string>
    <string name="local_backup">Local backup</string>
    <string name="cloud_backup">Cloud backup</string>
    <string name="no_account">No account</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="no_info">Not enough information</string>
    <string name="account_delete_info">Are you sure you want to delete your account?</string>
    <string name="reset_email_sent">An email with instructions has been sent.</string>
    <string name="cloud_backup_beta">Cloud backup is currently in testing. Please do not rely on this method until further notice.</string>
    <string name="set_password">Set password</string>
    <string name="enter_password">Enter password</string>
    <string name="pass_hint">Leave the field blank or write \'0\' to remove the password.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="deletion_error">Error deleting account!</string>
    <string name="deletion_succes">Account successfully deleted!</string>
    <string name="auth_need">Need verification</string>
    <string name="backup_complete">Backup complete</string>
    <string name="restore_fail">Error downloading backup!</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="donate">Donate to developer</string>
    <string name="for_users">By using the application you agree with:</string>
    <string name="agree">Agree</string>
    <string name="decline">Decline</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="screenshot_secured_notes">Screenshot in secured notes</string>
    <string name="close">Close</string>
    <string name="color_picker">Choose color</string>
    <string name="color">Color</string>
    <string name="label">Label</string>
    <string name="save">Save</string>
    <string name="important">Important</string>
    <string name="hobby">Hobby</string>
    <string name="extra_label">Label</string>
    <string name="agreement">Agreement is necessary</string>
    <string name="set_labels">Set extra labels name</string>
    <string name="select_theme">Select theme</string>
    <string name="default_theme">Default</string>
    <string name="monet_theme">Dynamic colors</string>
    <string name="coffee_theme">Iced coffee</string>
    <string name="app_theme">App theme</string>
    <string name="push_notification">Select time when push notification</string>
    <string name="add_reminder">Add a reminder</string>
    <string name="reminders">Reminders</string>
    <string name="style">View</string>
    <string name="sort">Sort</string>
    <string name="change_page">Switch page</string>
    <string name="remind_hint">Remind me about...</string>
    <string name="select_time">Remind time</string>
    <string name="delete_reminder">Delete reminder?</string>
    <string name="labels">Labels</string>
    <string name="error_saving_labels">Error saving labels</string>
    <string name="is_saved">Saved</string>
    <string name="beta_mode_activated">Beta features activated!</string>
    <string name="beta_mode">Beta mode</string>
    <string name="last_backup">Last backup:</string>
    <string name="total_notes">Total notes:</string>
    <string name="auto_backup">Auto backup</string>
    <string name="edit">Edit</string>
    <string name="pin">Pin</string>
    <string name="delete">Delete</string>
    <string name="auto_backup_on">Auto backup enabled</string>
    <string name="search_hint">Search through titles...</string>
    <string name="jump_toEnd">Scroll to the end</string>
    <string name="source_code">Source code</string>
    <string name="links">Links</string>
    <string name="gh_profile">GitHub profile</string>
    <string name="legal">Legal</string>
    <string name="app_desc">JustNotes is a simple and functional note-taking application. Beautiful design, user-friendly interface, all the necessary functions - all this in JustNotes!  Write down ideas, make lists, keep a diary - JustNotes will become your indispensable assistant.</string>
    <string name="about_app">About the App</string>
    <string name="app_restarting">Restarting JustNotes...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changes">Changelog</string>
    <string name="contribuitors">Contribuitors</string>
    <string name="translators">Translators</string>
    <string name="weblate" translatable="false">Weblate</string>
    <string name="no_label">Unlabeled</string>
    <string name="manage_labels">Manage labels</string>
    <string name="label_selected">Label selected:</string>
    <string name="executor_title">Executor is out!</string>
    <string name="executor_promo">Check out new app from jjewuz!</string>
    <string name="backup_warning">Due to the limitations of the backup system, the application needs to be restarted to work stably after backup. After restore the application will restart automatically.</string>
    <string name="note_sent_noti">Pin to notifications</string>
    <string name="hide">Hide</string>
    <string name="open">Open</string>
    <string name="service_work">Service is working</string>
    <string name="notification_sent">Notification sent</string>
    <string name="share">Share</string>
    <string name="copy_text">Copy text</string>
    <string name="copied_text">Note text copied!</string>
    <string name="update_legacy">Terms of Use and Privacy Policy is being updated to be clearer and include new features. Last updated: 20.12.2024. To continue using, please agree to the terms.</string>
    <string name="sure">Are you sure?</string>
    <string name="sure_backup">Do you want to backup your notes? It will re-write your old backup.</string>
    <string name="choose_bg">Choose note background</string>
    <string name="choose_bg_menu">Change background</string>
    <string name="generate_sum">Summarize with AI</string>
    <string name="ai_sum">AI summarize</string>
    <string name="experemental_features">Experemental features</string>
    <string name="warning">Warning</string>
    <string name="ef_warn">Experimental features are unstable: they may not work as expected or may cause the application to crash. Use with caution.</string>
    <string name="cloud_backup_account">Cloud backup requires account.</string>
    <string name="use_account">Use JustNotes account to access cloud backup functional.</string>
    <string name="change_sort">Tap to change notes sort</string>
    <string name="change_view">Tap to change notes view</string>
</resources>