<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/undo"
        android:iconTint="?colorOnBackground"
        android:title="@string/undo"
        app:showAsAction="always"
        android:id="@+id/undo" />
    <item
        android:icon="@drawable/redo"
        android:iconTint="?colorOnBackground"
        android:title="@string/redo"
        app:showAsAction="always"
        android:id="@+id/redo" />
    <item
        android:icon="@drawable/info"
        android:iconTint="?colorOnBackground"
        android:title="@string/count1"
        app:showAsAction="ifRoom"
        android:id="@+id/info" />
    <item
        android:icon="@drawable/down"
        android:iconTint="?colorOnBackground"
        android:title="@string/jump_toEnd"
        app:showAsAction="ifRoom"
        android:id="@+id/jumpToEnd" />
    <item
        android:icon="@drawable/label"
        android:iconTint="?colorOnBackground"
        android:title="@string/labels"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:id="@+id/labels" />
</menu>