<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/info">
        <item
            android:icon="@drawable/clear_text"
            android:title="@string/option1"
            android:id="@+id/first" />
        <item
            android:icon="@drawable/font"
            android:title="@string/option2"
            android:id="@+id/second" />
        <item
            android:icon="@drawable/export_txt"
            android:title="@string/export"
            android:id="@+id/export" />
        <item
            android:icon="@drawable/widget"
            android:title="@string/set_on_widget"
            android:id="@+id/widget" />
    </group>

</menu>