<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BackupFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Editor">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/backup_txt"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/backup_txt2"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/backup_warn"
                    android:textColor="?colorError"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/not_encrypted"
                    android:textColor="?colorOnErrorContainer"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



            <Button
                android:id="@+id/backup"
                android:layout_width="wrap_content"
                android:text="@string/do_backup"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/rest"
                android:layout_width="wrap_content"
                android:text="@string/do_restore"
                android:layout_margin="5dp"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_height="wrap_content"/>

            </LinearLayout>
                </com.google.android.material.card.MaterialCardView>



            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</FrameLayout>