<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="25dp"
                android:text="@string/note"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/savedtxt"
                android:gravity="center"
                android:layout_marginStart="25dp"
                android:text="@string/saved"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="2dp"/>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                style="@style/Top20Bottom10"
                app:cardBackgroundColor="?colorSurfaceContainer"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="40dp"
                            android:src="@drawable/label"
                            android:layout_height="40dp"
                            android:contentDescription="@string/label" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:id="@+id/curr_label"
                            android:text="@string/labels"/>

                    </LinearLayout>


                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:id="@+id/card_spinner"
                        android:layout_margin="5dp"
                        style="?attr/materialCardViewFilledStyle"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/categorySpinner"
                            android:layout_width="match_parent"
                            android:padding="5dp"
                            android:layout_gravity="center"
                            android:popupBackground="@drawable/rounded_dropdown_item"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                style="@style/Top10Bottom20"
                app:cardBackgroundColor="?colorSurfaceContainer"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:src="@drawable/note"
                        android:layout_height="40dp"
                        android:contentDescription="@string/actions" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/actions"/>

                </LinearLayout>


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/generate_sum"
                        android:layout_margin="10dp"
                        style="?attr/materialCardViewFilledStyle"
                        android:id="@+id/summarize"
                        app:icon="@drawable/ai"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_bg_menu"
                        android:layout_margin="10dp"
                        style="?attr/materialCardViewFilledStyle"
                        android:id="@+id/bgcolor"
                        app:icon="@drawable/palette"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButtonGroup
                            android:id="@+id/buttonGroup"
                            android:layout_width="wrap_content"
                            android:padding="5dp"
                            style="@style/Widget.Material3.MaterialButtonGroup.Connected"
                            android:layout_height="wrap_content">

                        <Button
                            android:layout_width="wrap_content"
                            android:id="@+id/importtxt"
                            android:layout_height="wrap_content"
                            style="?attr/materialCardViewFilledStyle"
                            android:text="@string/import_txt"
                            android:layout_weight="1"
                            app:icon="@drawable/load"
/>

                        <Button
                            android:layout_width="wrap_content"
                            android:id="@+id/exporttxt"
                            app:icon="@drawable/unload"
                            android:layout_marginStart="10dp"
                            android:layout_height="wrap_content"
                            style="?attr/materialCardViewFilledStyle"
                            android:text="@string/export"
                            android:layout_weight="1"/>

                        </com.google.android.material.button.MaterialButtonGroup>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:id="@+id/clear_txt"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:padding="5dp"
                            android:src="@drawable/clear_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/option1"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:id="@+id/pass_btn"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:padding="5dp"
                            android:src="@drawable/security" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/set_password"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:id="@+id/towidget"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:padding="5dp"
                            android:src="@drawable/widget" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/set_on_widget"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>