<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp"
    android:backgroundTint="?colorSurfaceContainer"
    style="?attr/materialCardViewFilledStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/idTVNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:paddingStart="5dp"
                android:layout_weight="1"
                android:text="@string/note"
                android:textStyle="bold"
                android:textSize="18sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/category"
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.CardView.Filled" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:id="@+id/category_tv"
                        android:text="@string/label"/>


                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <TextView
                android:id="@+id/idTVDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/lastedit"
                android:textSize="12sp" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:strokeWidth="0dp"
            android:id="@+id/textcontainer"
            android:backgroundTint="?colorSurfaceContainerHigh"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/notedesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:text="@string/notes"
                android:ellipsize="end"
                android:maxLines="5"
                android:textSize="14sp" />


        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>